Added differential manchester

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
       <div class="flex w-full flex-col p-4 items-center justify-between">
         <h3>Differential Manchester</h3>
-        <canvas id="m-differential"></canvas>
+        <canvas id="differential-manchester"></canvas>
         <div class="flex gap-4 mt-4">
           <button
             class="bg-blue-300 px-3 py-2 cursor-pointer hover:bg-blue-500 transition-all active:scale-95"
