Added download button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="flex gap-4 mt-4">
           <button
             class="bg-blue-300 px-3 py-2 cursor-pointer hover:bg-blue-500 transition-all active:scale-95"
-            onclick="download('normal')"
+            id="download-normal"
           >
             Download image
           </button>
@@ -60,7 +60,7 @@
         <div class="flex gap-4 mt-4">
           <button
             class="bg-blue-300 px-3 py-2 cursor-pointer hover:bg-blue-500 transition-all active:scale-95"
-            onclick="download('nrz-l')"
+            id="download-nrz-l"
           >
             Download image
           </button>
@@ -72,7 +72,7 @@
         <div class="flex gap-4 mt-4">
           <button
             class="bg-blue-300 px-3 py-2 cursor-pointer hover:bg-blue-500 transition-all active:scale-95"
-            onclick="download('nrz-i')"
+            id="download-nrz-i"
           >
             Download image
           </button>
@@ -84,7 +84,7 @@
         <div class="flex gap-4 mt-4">
           <button
             class="bg-blue-300 px-3 py-2 cursor-pointer hover:bg-blue-500 transition-all active:scale-95"
-            onclick="download('manchester')"
+            id="download-manchester"
           >
             Download image
           </button>
@@ -96,7 +96,7 @@
         <div class="flex gap-4 mt-4">
           <button
             class="bg-blue-300 px-3 py-2 cursor-pointer hover:bg-blue-500 transition-all active:scale-95"
-            onclick="download('differential-manchester')"
+            id="download-differential-manchester"
           >
             Download image
           </button>
